# Imageination

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  run_imageination.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-07-19-image-recipe-foundation.md
docs/superpowers/specs/: 2026-07-19-image-recipe-foundation-design.md
imageination/: __init__.py  app.py  core.py  engine.py  recipe.py  session.py
tests/: test_core.py  test_engine.py  test_recipe.py  test_session.py
